# statistics_and_probability_assignments

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
docs/: assignment_notes.md  assignment_template.md
notebooks/: README.md
src/statprob/: __init__.py  data_utils.py  descriptive.py  histogram_chart.py  mean_interval.py  probability.py
tests/: test_descriptive.py  test_probability.py
