[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "statistics-and-probability-assignments"
version = "0.1.0"
description = "Helper library and exercises for statistics and probability coursework"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Your Name", email = "you@example.com" }
]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "scipy>=1.11",
  "matplotlib>=3.8",
  "statsmodels>=0.14"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.6"
]

[tool.setuptools.package-data]
"statprob" = ["py.typed"]

[tool.pytest.ini_options]
addopts = "-ra --color=yes"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src"]
exclude = [".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "DTZ", "PT", "SIM", "PL"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
